src/objects/Quotation__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quote_Campaign__c</fullName>
        <inlineHelpText>Lookup the main Campaign this Quotation is about</inlineHelpText>
        <label>Quote Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Quotations</relationshipLabel>
        <relationshipName>Quotations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Date__c</fullName>
        <inlineHelpText>Date of quote</inlineHelpText>
        <label>Quote Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Issues__c</fullName>
        <inlineHelpText>Issue interest(s) to which the quote relates</inlineHelpText>
        <label>Quote Issues</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Quote_Nature__c</fullName>
        <inlineHelpText>Nature of the quote</inlineHelpText>
        <label>Quote Nature</label>
        <picklist>
            <picklistValues>
                <fullName>Compliment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recommendation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Story</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vow</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Quote_Permission__c</fullName>
        <description>fka Quote Usage Guidlines &amp; Quote_Usage_Guidelines</description>
        <label>Quote Permission</label>
        <picklist>
            <picklistValues>
                <fullName>Pending, internal use only</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved for public use, attribution ok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved for public use, anonymous only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied, internal use only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t ask, internal use only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quote_Source__c</fullName>
        <inlineHelpText>This is to explain where the quote came from.  Ex. - survey</inlineHelpText>
        <label>Quote Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Text_Original__c</fullName>
        <inlineHelpText>Full unedited quote as originally received / heard</inlineHelpText>
        <label>Quote Text - Original</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quote_Text_Public__c</fullName>
        <inlineHelpText>Edited from the original, prepared for public use (if permission has been granted - see permission field)</inlineHelpText>
        <label>Quote Text - Public</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quoted_Contact__c</fullName>
        <inlineHelpText>Lookup the Contact who wrote or said this quotation</inlineHelpText>
        <label>Quoted Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotations</relationshipLabel>
        <relationshipName>Quotation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quoted_Organization__c</fullName>
        <inlineHelpText>Lookup the Organization this quotation was made on behalf of</inlineHelpText>
        <label>Quoted Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotations</relationshipLabel>
        <relationshipName>Quotation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Show_On_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if OK to show this quotation on website</inlineHelpText>
        <label>Show On Website?</label>
        <type>Checkbox</type>
    </fields>
    <label>Quotation</label>
    <listViews>
        <fullName>All_Quotations</fullName>
        <columns>NAME</columns>
        <columns>Quoted_Contact__c</columns>
        <columns>Quoted_Organization__c</columns>
        <columns>Quote_Campaign__c</columns>
        <columns>Quote_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Quote_Permission__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Quotations</label>
    </listViews>
    <nameField>
        <label>Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>